--- a/vite_vue3_main/main/index.html
+++ b/vite_vue3_main/main/index.html
@@ -10,10 +10,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/assets/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="/assets/reset_style.css" />
+    <link rel="icon" href="/main/assets/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/main/assets/reset_style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>microApp_demo</title>
+    <script type="module" crossorigin src="/main/assets/index.2e9110ce.js"></script>
+    <link rel="stylesheet" href="/main/assets/index.ca2ad88b.css">
   </head>
   <body>
     <div id="app"></div>
@@ -23,6 +25,6 @@
         document.body.style.background = 'transparent'
       }
     </script>
-    <script type="module" src="/src/main.js"></script>
+    
   </body>
 </html>
