--- a/vite_vue3_vite1/index.html
+++ b/vite_vue3_vite1/index.html
@@ -2,8 +2,8 @@
  * @Author: guoke scc15599065860@163.com
  * @Date: 2023-06-10 14:43:39
  * @LastEditors: guoke scc15599065860@163.com
- * @LastEditTime: 2023-06-15 10:57:31
- * @FilePath: \microApp_demo\vite-vue3-child\index.html
+ * @LastEditTime: 2023-06-17 15:05:05
+ * @FilePath: \microApp_demo\vite_vue3_vite1\index.html
  * @Description: index
 -->
 <!DOCTYPE html>
@@ -12,7 +12,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>child-vite</title>
+    <title>vite1</title>
   </head>
   <body>
     <div id="vite1"></div>
